[gd_scene load_steps=17 format=2]

[ext_resource path="res://Sprites/Toucan_spritesheet.png" type="Texture" id=1]
[ext_resource path="res://Player/Player.gd" type="Script" id=2]
[ext_resource path="res://Sprites/Cannon.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Stand.png" type="Texture" id=4]
[ext_resource path="res://Sprites/AimLine.png" type="Texture" id=5]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 128, 102 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 128, 102 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 102, 128, 102 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 128, 102 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 128, 102, 128, 102 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 256, 0, 128, 102 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 128, 0, 128, 102 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 128, 102 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 256, 102, 128, 102 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 384, 102, 128, 102 )

[sub_resource type="SpriteFrames" id=11]
animations = [ {
"frames": [ SubResource( 1 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 4 ), SubResource( 5 ), SubResource( 4 ), SubResource( 4 ), SubResource( 5 ), SubResource( 4 ), SubResource( 5 ), SubResource( 4 ), SubResource( 5 ), SubResource( 4 ), SubResource( 5 ) ],
"loop": false,
"name": "flap",
"speed": 15.0
}, {
"frames": [ SubResource( 4 ), SubResource( 6 ), SubResource( 7 ), SubResource( 6 ), SubResource( 4 ) ],
"loop": false,
"name": "blink",
"speed": 5.0
}, {
"frames": [ SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 10 ), SubResource( 10 ), SubResource( 10 ), SubResource( 10 ), SubResource( 10 ), SubResource( 10 ), SubResource( 10 ), SubResource( 10 ), SubResource( 10 ), SubResource( 10 ), SubResource( 10 ), SubResource( 10 ), SubResource( 10 ), SubResource( 9 ), SubResource( 8 ) ],
"loop": false,
"name": "look",
"speed": 5.0
} ]

[node name="Player" type="Node2D"]
position = Vector2( 0, 2 )
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -65, 3 )
frames = SubResource( 11 )
animation = "idle"

[node name="AimeLine" type="Line2D" parent="."]
points = PoolVector2Array( 0, 0, 0, -1 )
width = 16.0
default_color = Color( 1, 1, 1, 1 )
texture = ExtResource( 5 )
texture_mode = 1
begin_cap_mode = 2
end_cap_mode = 2

[node name="Aimer" type="Position2D" parent="."]

[node name="Sprite" type="Sprite" parent="Aimer"]
texture = ExtResource( 3 )

[node name="RayCast2D" type="RayCast2D" parent="Aimer"]
position = Vector2( -8, 0 )
enabled = true
cast_to = Vector2( 0, -750 )
collision_mask = 7

[node name="RayCast2D2" type="RayCast2D" parent="Aimer"]
position = Vector2( 8, 0 )
enabled = true
cast_to = Vector2( 0, -750 )
collision_mask = 7

[node name="Stand" type="Sprite" parent="."]
texture = ExtResource( 4 )

[node name="Timer" type="Timer" parent="."]
wait_time = 7.0
autostart = true

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
